--- a/BinningSkill/BinningSkill.csproj
+++ b/BinningSkill/BinningSkill.csproj
@@ -8,4 +8,11 @@
 	<ItemGroup>
 		<PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.0.2" />
 	</ItemGroup>
+
+    <ItemGroup>
+        <Reference Include="SpaceCore">
+            <HintPath>$(GamePath)\Mods\Ridgeside Village\RidgesideVillage\RidgesideVillage.dll</HintPath>
+            <Private>false</Private>
+        </Reference>
+    </ItemGroup>
 </Project>
