--- a/WinterStarSpouse/WinterStarSpouse.csproj
+++ b/WinterStarSpouse/WinterStarSpouse.csproj
@@ -1,5 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="..\common.targets" />
+<Project Sdk="Microsoft.NET.Sdk">
+    <Import Project="..\common-nospace.targets" />
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
