--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add manifest.json
+          git add ${{ matrix.subdir }}/manifest.json
           git commit -m "Auto-increment version number"
           git push
       
