--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -1,7 +1,4 @@
 name: Increment manifest version on push
-
-env:
-  SUBDIR: BetterFestivalNotifications
   
 on:
   push:
@@ -12,18 +9,24 @@ jobs:
   provide_subdirs_json:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Get changed subdirectories
-        uses: Stockopedia/action-get-changed-files@v1
         id: get_changed
+        uses: tj-actions/changed-files@v35
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          ignore: "**/+(.github|BirbShared*)/**"
-          foldersOnly: true
-          format: json
+          dir_names: true
+          dir_names_max_depth: 1
+          files_ignore: |
+            .github/**
+            BirbShared*/**
+            *.*
+          json: true
       - name: Print directories
-        run: echo ${{ steps.get_changed.outputs.changed }}
+        run: echo ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
     outputs:
-      matrix: ${{ steps.get_changed.outputs.changed }}
+      matrix: ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
           
   increment_version:
     runs-on: ubuntu-latest
