--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -31,7 +31,7 @@ jobs:
   increment_version:
     runs-on: ubuntu-latest
     needs: provide_subdirs_json
-    if: ${{ needs.provide_subdirs_json.outputs.matrix != "[]"}}
+    if: ${{ needs.provide_subdirs_json.outputs.matrix != '[]'}}
     strategy:
       matrix:
         subdir: ${{ fromJson(needs.provide_subdirs_json.outputs.matrix) }}
