--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -1,4 +1,4 @@
-name: Increment manifest version on push
+name: Increment Versions
   
 on:
   push:
@@ -6,13 +6,14 @@ on:
       - main
       
 jobs:
-  provide_subdirs_json:
+  mods_json:
+    name: Get Updated Mods
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get changed subdirectories
+      - name: Get Mods Json
         id: get_changed
         uses: tj-actions/changed-files@v35
         with:
@@ -23,18 +24,19 @@ jobs:
             BirbShared*/**
             *.*
           json: "true"
-      - name: Print directories
+      - name: Print Mods
         run: echo ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
     outputs:
-      matrix: ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
+      matrix: $steps.get_changed.outputs.all_changed_and_modified_files
           
   increment_version:
+    name: Update Version
     runs-on: ubuntu-latest
-    needs: provide_subdirs_json
-    if: ${{ needs.provide_subdirs_json.outputs.matrix != '[]'}}
+    needs: mods_json
+    if: ${{ needs.mods_json.outputs.matrix != '[]'}}
     strategy:
       matrix:
-        subdir: ${{ fromJson(needs.provide_subdirs_json.outputs.matrix) }}
+        subdir: ${{ fromJson(needs.mods_json.outputs.matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
