--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -27,17 +27,19 @@ jobs:
       - name: Print Mods
         run: echo ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
     outputs:
-      matrix: $steps.get_changed.outputs.all_changed_and_modified_files
+      matrix: ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
           
   increment_version:
     name: Update Version
     runs-on: ubuntu-latest
     needs: mods_json
     if: ${{ needs.mods_json.outputs.matrix != '[]'}}
-    strategy:
-      matrix:
-        subdir: ${{ fromJson(needs.mods_json.outputs.matrix) }}
+    # strategy:
+    #   matrix:
+    #     subdir: ${{ fromJson(needs.mods_json.outputs.matrix) }}
     steps:
+      - name: Print Dependency
+        run: echo ${{ needs.mods_json.outputs.matrix }}
       - name: Checkout
         uses: actions/checkout@v3
 
