--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -24,22 +24,23 @@ jobs:
             BirbShared*/**
             *.*
           json: "true"
-      - name: Print Mods
-        run: echo ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
+      - name: Set Matrix
+        id: set_matrix
+        run: |
+          echo ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
+          echo "matrix={\"container\":${{ steps.get_changed.outputs.all_changed_and_modified_files }}}" >> "$GITHUB_OUTPUT"
     outputs:
-      matrix: ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
+      matrix: ${{ steps.set_matrix.outputs.matrix }}
           
   increment_version:
     name: Update Version
     runs-on: ubuntu-latest
     needs: mods_json
     if: ${{ needs.mods_json.outputs.matrix != '[]'}}
-    # strategy:
-    #   matrix:
-    #     subdir: ${{ fromJson(needs.mods_json.outputs.matrix) }}
+    strategy:
+      matrix:
+        subdir: ${{ fromJson(needs.mods_json.outputs.matrix) }}
     steps:
-      - name: Print Dependency
-        run: echo ${{ needs.mods_json.outputs.matrix }}
       - name: Checkout
         uses: actions/checkout@v3
 
