--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -26,9 +26,10 @@ jobs:
           json: "true"
       - name: Set Matrix
         id: set_matrix
+        if: ${{ steps.get_changed.outputs.all_changed_and_modified_files != '[]'}}
         run: |
           echo ${{ steps.get_changed.outputs.all_changed_and_modified_files }}
-          echo "matrix={\"container\":${{ steps.get_changed.outputs.all_changed_and_modified_files }}}" >> "$GITHUB_OUTPUT"
+          echo "matrix={\"subdir\":${{ steps.get_changed.outputs.all_changed_and_modified_files }}}" >> "$GITHUB_OUTPUT"
     outputs:
       matrix: ${{ steps.set_matrix.outputs.matrix }}
           
@@ -36,7 +37,7 @@ jobs:
     name: Update Version
     runs-on: ubuntu-latest
     needs: mods_json
-    if: ${{ needs.mods_json.outputs.matrix != '[]'}}
+    if: ${{ needs.mods_json.outputs.matrix != ''}}
     strategy:
       matrix: ${{ fromJson(needs.mods_json.outputs.matrix) }}
     steps:
