Add release builds

--- a/.github/workflows/increment_version.yml
+++ b/.github/workflows/increment_version.yml
@@ -22,6 +22,7 @@ jobs:
           files_ignore: |
             .github/**
             BirbShared*/**
+            _releases/**
             *.*
           json: "true"
       - name: Set Matrix
