--- a/.github/workflows/release_mod.yml
+++ b/.github/workflows/release_mod.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - '_releeases/Release/**'
+      - '_releases/Release/**'
 
 jobs:
   releases_json:
