--- a/.github/workflows/release_mod.yml
+++ b/.github/workflows/release_mod.yml
@@ -60,7 +60,7 @@ jobs:
           echo "name=$(cat ${{ steps.parse_manifest.outputs.manifest }} | jq -r '.Name')" >> "$GITHUB_OUTPUT"
           echo "version=$(cat ${{ steps.parse_manifest.outputs.manifest }} | jq -r '.Version')" >> "$GITHUB_OUTPUT"
           echo "description=$(cat ${{ steps.parse_manifest.outputs.manifest }} | jq -r '.Description')" >> "$GITHUB_OUTPUT"
-          echo "mod_id=$(cat ${{ steps.parse_manifest.outputs.manifest }} | jq -r '.UpdateKeys[] | split(\":\") | select(.[0] == \"Nexus\") | .[1]')" >> "$GITHUB_OUTPUT"
+          echo "mod_id=$(cat ${{ steps.parse_manifest.outputs.manifest }} | jq -r '.UpdateKeys[] | split(":") | select(.[0] == "Nexus") | .[1]')" >> "$GITHUB_OUTPUT"
 
       - name: Upload Mod File
         uses: Vodianoi/uploadMod@0.9.40
