--- a/JunimoKartGlobalRankings/JunimoKartGlobalRankings.csproj
+++ b/JunimoKartGlobalRankings/JunimoKartGlobalRankings.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\common.targets" />
 
   <PropertyGroup>
@@ -6,19 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.0.2" />
-    <Reference Include="AWSSDK.Core">
-        <HintPath>.\Libraries\AWSSDK.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="AWSSDK.CognitoIdentity">
-        <HintPath>.\Libraries\AWSSDK.CognitoIdentity.dll</HintPath>
-    </Reference>
-    <Reference Include="AWSSDK.SecurityToken">
-        <HintPath>.\Libraries\AWSSDK.SecurityToken.dll</HintPath>
-    </Reference>
-    <Reference Include="AWSSDK.DynamoDBv2">
-        <HintPath>.\Libraries\AWSSDK.DynamoDBv2.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
