Add Nexus update key

--- a/LeaderboardLibrary/manifest.json
+++ b/LeaderboardLibrary/manifest.json
@@ -7,6 +7,6 @@
     "EntryDll": "LeaderboardLibrary.dll",
     "MinimumApiVersion": "3.18.0",
     "UpdateKeys": [
-        "Nexus:"
+        "Nexus:15102"
     ]
 }
