--- a/GameboyArcade/manifest.json
+++ b/GameboyArcade/manifest.json
@@ -6,9 +6,7 @@
     "UniqueID": "drbirbdev.GameboyArcade",
     "EntryDll": "GameboyArcade.dll",
     "MinimumApiVersion": "3.18.0",
-    "UpdateKeys": [
-        "Nexus:15194"
-    ],
+    "UpdateKeys": [],
     "Dependencies": [
         {
             "UniqueID": "spacechase0.DynamicGameAssets",
