--- a/.github/workflows/release_mod.yml
+++ b/.github/workflows/release_mod.yml
@@ -78,9 +78,7 @@ jobs:
   increment_version:
     name: Update Version
     runs-on: ubuntu-latest
-    needs: |
-      releases_json
-      upload_file
+    needs: upload_file
     if: ${{ needs.releases_json.outputs.matrix != ''}}
     strategy:
       matrix: ${{ fromJson(needs.releases_json.outputs.matrix) }}
