Refactor to use attribute library

--- a/GameboyArcadeTemplate/[CP] GameboyArcadeTemplate/manifest.json
+++ b/GameboyArcadeTemplate/[CP] GameboyArcadeTemplate/manifest.json
@@ -8,6 +8,6 @@
         "UniqueID": "Pathoschild.ContentPatcher"
     },
     "UpdateKeys": [
-        "Nexus:???"
+        "ModDrop:1318487@Template"
     ]
 }
