--- a/GameboyArcadeTemplate/[GBA] GameboyArcadeTemplate/manifest.json
+++ b/GameboyArcadeTemplate/[GBA] GameboyArcadeTemplate/manifest.json
@@ -8,6 +8,6 @@
         "UniqueID": "drbirbdev.GameboyArcade"
     },
     "UpdateKeys": [
-        "Nexus:15194@Template"
+        "ModDrop:1318487@Template"
     ]
 }
