--- a/GameboyArcade/manifest.json
+++ b/GameboyArcade/manifest.json
@@ -1,12 +1,14 @@
-{
+﻿{
   "Name": "GameboyArcade",
   "Author": "drbirbdev",
-  "Version": "0.1.1",
+  "Version": "0.1.2",
   "Description": "A Library for enabling Gameboy Roms to be played as in-game arcade machines.",
   "UniqueID": "drbirbdev.GameboyArcade",
   "EntryDll": "GameboyArcade.dll",
   "MinimumApiVersion": "3.18.0",
-  "UpdateKeys": [],
+  "UpdateKeys": [
+    "ModDrop:1318487"
+  ],
   "Dependencies": [
     {
       "UniqueID": "spacechase0.DynamicGameAssets",
