--- a/GameboyArcadeTemplate/[DGA] GameboyArcadeTemplate/manifest.json
+++ b/GameboyArcadeTemplate/[DGA] GameboyArcadeTemplate/manifest.json
@@ -8,7 +8,7 @@
         "UniqueID": "spacechase0.DynamicGameAssets"
     },
     "UpdateKeys": [
-        "Nexus:???"
+        "ModDrop:1318487@Template"
     ],
     "DGA.FormatVersion": 2,
     "DGA.ConditionsFormatVersion": "1.23.0"
