--- a/SocializingSkill/SocializingSkill.csproj
+++ b/SocializingSkill/SocializingSkill.csproj
@@ -1,12 +1,3 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\common.targets" />
-
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <Nullable>disable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Update="Pathoschild.Stardew.ModBuildConfig" Version="4.1.0" />
-  </ItemGroup>
 </Project>
