--- a/.github/workflows/translate_mod.yml
+++ b/.github/workflows/translate_mod.yml
@@ -48,7 +48,7 @@ jobs:
       - name: DeepL Translate Github Action
         uses: lyqht/deepl-translate-github-action@v2.1.1
         with:
-          target_languages: de,es,fr,hu,id,it,ja,ko,pl,pt-PT,pt-BR,ru,th,tr,vi,zh
+          target_languages: de,es,fr,hu,id,it,ja,ko,pl,pt-PT,pt-BR,ru,tr,zh
           input_file_path: ${{ matrix.file }}
           output_file_name_pattern: ${{ steps.parse_folder.outputs.folder }}/{language}.json
           deepl_api_key: ${{ secrets.DEEPL_API_KEY }}
