--- a/HalloweenSeason/[CP] HalloweenSeason/manifest.json
+++ b/HalloweenSeason/[CP] HalloweenSeason/manifest.json
@@ -1,7 +1,7 @@
-﻿{
+{
     "Name": "[CP] HalloweenSeason",
     "Author": "drbirbdev",
-    "Version": "1.0.0",
+    "Version": "1.0.1",
     "Description": "Add halloween seasonal event changes.",
     "UniqueID": "drbirbdev.HalloweenSeason.CP",
     "ContentPackFor": {
@@ -37,6 +37,9 @@
         },
         {
             "UniqueID": "aedenthorn.BuffFramework"
+        },
+        {
+            "UniqueID": "PurrplingCat.CustomGiftDialogue"
         }
     ]
 }
