Using improved build systems

--- a/LookToTheSky/LookToTheSky.csproj
+++ b/LookToTheSky/LookToTheSky.csproj
@@ -1,3 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\common-nospace.targets" />
+    <Import Project="..\common.targets" />
+
+    <PropertyGroup>
+        <Description>Adds a slingshot minigame when outdoors and things can be heard overhead.</Description>
+        <Version>1.0.4</Version>
+        <UpdateKeys>Nexus:15262</UpdateKeys>
+    </PropertyGroup>
+    
 </Project>
