--- a/BinningSkill/manifest.json
+++ b/BinningSkill/manifest.json
@@ -1,26 +1,32 @@
 {
+  /*
+   | This file is automatically updated by ModManifestBuilder
+   | when the project is compiled.
+   | 
+   | Changes made to this file may be overwritten.
+   | 
+   */
+  "$schema": "https://smapi.io/schemas/manifest.json",
+  "UniqueID": "drbirbdev.BinningSkill",
   "Name": "BinningSkill",
   "Author": "drbirbdev",
-  "Version": "1.2.8",
+  "Version": "1.2.8-Debug",
   "Description": "Adds a skill related to digging through trashcans.",
-  "UniqueID": "drbirbdev.BinningSkill",
+  "MinimumApiVersion": "4.0.0-alpha.20231012",
   "EntryDll": "BinningSkill.dll",
-  "MinimumApiVersion": "3.18.2",
-  "UpdateKeys": [
-    "Nexus:14073"
-  ],
   "Dependencies": [
     {
-      "UniqueID": "spacechase0.SpaceCore"
-    },
-    {
-      "UniqueID": "spacechase0.GenericModConfigMenu",
-      "IsRequired": false
-    },
-    {
       "UniqueID": "DaLion.Overhaul",
-      "MinimumVersion": "1.1.1",
       "IsRequired": false
+    },
+    {
+      "UniqueID": "Pathoschild.ContentPatcher"
+    },
+    {
+      "UniqueID": "spacechase0.SpaceCore"
     }
+  ],
+  "UpdateKeys": [
+    "Nexus:14073"
   ]
 }
