--- a/GameboyArcade/GameboyArcade.csproj
+++ b/GameboyArcade/GameboyArcade.csproj
@@ -1,7 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\common-nospace.targets" />
+    <Import Project="..\common.targets" />
+
+    <PropertyGroup>
+        <Description>A Library for enabling Gameboy Roms to be played as in-game arcade machines.</Description>
+        <Version>0.1.3</Version>
+        <UpdateKeys>ModDrop:1318487</UpdateKeys>
+    </PropertyGroup>
     
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
 </Project>
