--- a/GameboyArcade/GameboyArcade.csproj
+++ b/GameboyArcade/GameboyArcade.csproj
@@ -6,5 +6,8 @@
         <Version>0.1.3</Version>
         <UpdateKeys>ModDrop:1318487</UpdateKeys>
     </PropertyGroup>
-    
+
+    <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
 </Project>
