Fix timing issues with BirbCore, refactor custom skills

--- a/SocializingSkill/SocializingSkill.csproj
+++ b/SocializingSkill/SocializingSkill.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <Import Project="..\common.targets" />
-    <Import Project="..\common-contentpatcher.targets"/>
-    <Import Project="..\common-spacecore.targets"/>
+    <Import Project="..\common-contentpatcher.targets" />
+    <Import Project="..\common-spacecore.targets" />
 
     <PropertyGroup>
         <Description>Adds a skill related to befriending villagers.</Description>
@@ -11,6 +11,12 @@
 
     <ItemGroup>
         <SMAPIDependency Include="DaLion.Overhaul" MinimumVersion="1.1.1" Required="false" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ContentPatcher\i18n\" />
+      <Folder Include="ContentPatcher\assets\" />
+      <Folder Include="ContentPatcher\data\" />
     </ItemGroup>
 
     
