--- a/RanchingToolUpgrades/ContentPatcher/manifest.json
+++ b/RanchingToolUpgrades/ContentPatcher/manifest.json
@@ -10,7 +10,7 @@
     "UpdateKeys": [],
     "Dependencies": [
         {
-            "UniqueID": "drbirbdev.PanningUpgrades"
+            "UniqueID": "drbirbdev.RanchingToolUpgrades"
         }
     ]
 }
