--- a/common.targets
+++ b/common.targets
@@ -14,6 +14,7 @@
         <EnableNETAnalyzers>true</EnableNETAnalyzers>
         <EnableHarmony>true</EnableHarmony>
         <GamePath>C:\Program Files (x86)\Steam\steamapps\common\Stardew Valley\</GamePath>
+        <EnableModZip Condition="$(Configuration) == 'Debug'">false</EnableModZip>
     </PropertyGroup>
 
     <!--import mod build package-->
