--- a/GameboyArcade/manifest.json
+++ b/GameboyArcade/manifest.json
@@ -1,16 +1,17 @@
 {
   "$schema": "https://smapi.io/schemas/manifest.json",
   "UniqueID": "drbirbdev.GameboyArcade",
-  "Name": "GameboyArcade",
+  "Name": "Gameboy Arcade",
   "Author": "drbirbdev",
-  "Version": "0.2.0",
+  "Version": "1.0.0-Debug",
   "Description": "A Library for enabling Gameboy Roms to be played as in-game arcade machines.",
-  "MinimumApiVersion": "4.0",
+  "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
+  "MinimumGameVersion": "1.6.10",
   "EntryDll": "GameboyArcade.dll",
   "Dependencies": [
     {
       "UniqueID": "drbirbdev.BirbCore",
-      "MinimumVersion": "1.0.3"
+      "MinimumVersion": "1.1.0"
     },
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
