--- a/LeaderboardLibrary/manifest.json
+++ b/LeaderboardLibrary/manifest.json
@@ -1,16 +1,17 @@
 {
   "$schema": "https://smapi.io/schemas/manifest.json",
   "UniqueID": "drbirbdev.LeaderboardLibrary",
-  "Name": "LeaderboardLibrary",
+  "Name": "Leaderboard Library",
   "Author": "drbirbdev",
-  "Version": "0.2.0",
+  "Version": "0.2.0-Debug",
   "Description": "A library for creating and managing leaderboards.",
-  "MinimumApiVersion": "4.0",
+  "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
+  "MinimumGameVersion": "1.6.10",
   "EntryDll": "LeaderboardLibrary.dll",
   "Dependencies": [
     {
       "UniqueID": "drbirbdev.BirbCore",
-      "MinimumVersion": "1.0.3"
+      "MinimumVersion": "1.1.0"
     },
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
