--- a/LookToTheSky/manifest.json
+++ b/LookToTheSky/manifest.json
@@ -1,16 +1,17 @@
 {
   "$schema": "https://smapi.io/schemas/manifest.json",
   "UniqueID": "drbirbdev.LookToTheSky",
-  "Name": "LookToTheSky",
+  "Name": "Look to the Sky",
   "Author": "drbirbdev",
-  "Version": "1.1.0",
+  "Version": "1.1.0-Debug",
   "Description": "Adds a slingshot minigame when outdoors and things can be heard overhead.",
-  "MinimumApiVersion": "4.0",
+  "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
+  "MinimumGameVersion": "1.6.10",
   "EntryDll": "LookToTheSky.dll",
   "Dependencies": [
     {
       "UniqueID": "drbirbdev.BirbCore",
-      "MinimumVersion": "1.0.3"
+      "MinimumVersion": "1.1.0"
     },
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
