--- a/RealtimeTokens/manifest.json
+++ b/RealtimeTokens/manifest.json
@@ -1,16 +1,17 @@
 {
   "$schema": "https://smapi.io/schemas/manifest.json",
   "UniqueID": "drbirbdev.RealtimeFramework",
-  "Name": "RealtimeFramework",
+  "Name": "Realtime Framework",
   "Author": "drbirbdev",
-  "Version": "1.0.0",
+  "Version": "1.0.0-Debug",
   "Description": "Add Content Patcher tokens and SMAPI API for real-time events.",
-  "MinimumApiVersion": "4.0",
+  "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
+  "MinimumGameVersion": "1.6.10",
   "EntryDll": "RealtimeFramework.dll",
   "Dependencies": [
     {
       "UniqueID": "drbirbdev.BirbCore",
-      "MinimumVersion": "1.0.3"
+      "MinimumVersion": "1.1.0"
     },
     {
       "UniqueID": "Pathoschild.ContentPatcher",
