--- a/SlimingSkill/SlimingSkill.csproj
+++ b/SlimingSkill/SlimingSkill.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <Import Project="$(SolutionDir)\BirbSharedSpaceCore\BirbSharedSpaceCore.projitems" Label="Shared" />
     <Import Project="..\common.targets" />
 
     <PropertyGroup>
