--- a/WinterStarSpouse/manifest.json
+++ b/WinterStarSpouse/manifest.json
@@ -3,10 +3,10 @@
   "UniqueID": "drbirbdev.WinterStarSpouse",
   "Name": "Winter Star Spouse",
   "Author": "drbirbdev",
-  "Version": "1.2.0-Debug",
+  "Version": "1.2.0",
   "Description": "Customize how often you spouse is your winter star secret santa.",
   "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
-  "MinimumGameVersion": "1.6.10",
+  "MinimumGameVersion": "1.6.13",
   "EntryDll": "WinterStarSpouse.dll",
   "Dependencies": [
     {
