--- a/JunimoKartGlobalRankings/manifest.json
+++ b/JunimoKartGlobalRankings/manifest.json
@@ -3,10 +3,10 @@
   "UniqueID": "drbirbdev.JunimoKartGlobalRankings",
   "Name": "JunimoKart Global Rankings",
   "Author": "drbirbdev",
-  "Version": "1.0.4-Debug",
+  "Version": "1.1.0",
   "Description": "Shares JunimoKart Endless Mode scores with the world.",
   "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
-  "MinimumGameVersion": "1.6.10",
+  "MinimumGameVersion": "1.6.13",
   "EntryDll": "JunimoKartGlobalRankings.dll",
   "Dependencies": [
     {
