--- a/LeaderboardLibrary/manifest.json
+++ b/LeaderboardLibrary/manifest.json
@@ -3,10 +3,10 @@
   "UniqueID": "drbirbdev.LeaderboardLibrary",
   "Name": "Leaderboard Library",
   "Author": "drbirbdev",
-  "Version": "0.2.0-Debug",
+  "Version": "0.3.0",
   "Description": "A library for creating and managing leaderboards.",
   "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
-  "MinimumGameVersion": "1.6.10",
+  "MinimumGameVersion": "1.6.13",
   "EntryDll": "LeaderboardLibrary.dll",
   "Dependencies": [
     {
