--- a/LookToTheSky/manifest.json
+++ b/LookToTheSky/manifest.json
@@ -3,10 +3,10 @@
   "UniqueID": "drbirbdev.LookToTheSky",
   "Name": "Look to the Sky",
   "Author": "drbirbdev",
-  "Version": "1.1.0-Debug",
+  "Version": "1.2.0",
   "Description": "Adds a slingshot minigame when outdoors and things can be heard overhead.",
   "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
-  "MinimumGameVersion": "1.6.10",
+  "MinimumGameVersion": "1.6.13",
   "EntryDll": "LookToTheSky.dll",
   "Dependencies": [
     {
