--- a/PuzzleFloor/manifest.json
+++ b/PuzzleFloor/manifest.json
@@ -3,10 +3,10 @@
   "UniqueID": "drbirbdev.PuzzleFloor",
   "Name": "Puzzle Floor",
   "Author": "drbirbdev",
-  "Version": "1.0.0-Debug",
+  "Version": "1.0.0",
   "Description": "Adds puzzle piece flooring",
   "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
-  "MinimumGameVersion": "1.6.10",
+  "MinimumGameVersion": "1.6.13",
   "EntryDll": "PuzzleFloor.dll",
   "Dependencies": [
     {
