--- a/RanchingToolUpgrades/manifest.json
+++ b/RanchingToolUpgrades/manifest.json
@@ -3,10 +3,10 @@
   "UniqueID": "drbirbdev.RanchingToolUpgrades",
   "Name": "Ranching Tool Upgrades",
   "Author": "drbirbdev",
-  "Version": "1.2.0-Debug",
+  "Version": "1.2.0",
   "Description": "Add Pail, Shear, and Autograbber upgrades at the blacksmith.",
   "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
-  "MinimumGameVersion": "1.6.10",
+  "MinimumGameVersion": "1.6.13",
   "EntryDll": "RanchingToolUpgrades.dll",
   "Dependencies": [
     {
