--- a/RealtimeTokens/manifest.json
+++ b/RealtimeTokens/manifest.json
@@ -3,10 +3,10 @@
   "UniqueID": "drbirbdev.RealtimeFramework",
   "Name": "Realtime Framework",
   "Author": "drbirbdev",
-  "Version": "1.0.0-Debug",
+  "Version": "1.0.0",
   "Description": "Add Content Patcher tokens and SMAPI API for real-time events.",
   "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
-  "MinimumGameVersion": "1.6.10",
+  "MinimumGameVersion": "1.6.13",
   "EntryDll": "RealtimeFramework.dll",
   "Dependencies": [
     {
