--- a/SlimingSkill/manifest.json
+++ b/SlimingSkill/manifest.json
@@ -3,10 +3,10 @@
   "UniqueID": "drbirbdev.SlimingSkill",
   "Name": "Sliming Skill",
   "Author": "drbirbdev",
-  "Version": "0.0.1-Debug",
+  "Version": "0.0.1",
   "Description": "Adds a skill related to raising and fighting slimes.",
   "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
-  "MinimumGameVersion": "1.6.10",
+  "MinimumGameVersion": "1.6.13",
   "EntryDll": "SlimingSkill.dll",
   "Dependencies": [
     {
