--- a/BetterFestivalNotifications/manifest.json
+++ b/BetterFestivalNotifications/manifest.json
@@ -15,6 +15,7 @@
     },
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
+      "MinimumVersion": "1.14.0",
       "IsRequired": false
     }
   ],
