--- a/BinningSkill/manifest.json
+++ b/BinningSkill/manifest.json
@@ -23,6 +23,7 @@
     },
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
+      "MinimumVersion": "1.14.0",
       "IsRequired": false
     },
     {
