--- a/HalloweenSeason/manifest.json
+++ b/HalloweenSeason/manifest.json
@@ -5,12 +5,13 @@
   "Author": "drbirbdev",
   "Version": "1.1.0",
   "Description": "Add halloween seasonal event changes.",
-  "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
+  "MinimumApiVersion": "4.1.6+09dd92a74f13a3edeccb72242015876d7b5f6463",
   "MinimumGameVersion": "1.6.13",
   "EntryDll": "HalloweenSeason.dll",
   "Dependencies": [
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
+      "MinimumVersion": "1.14.0",
       "IsRequired": false
     }
   ],
