--- a/RanchingToolUpgrades/manifest.json
+++ b/RanchingToolUpgrades/manifest.json
@@ -5,7 +5,7 @@
   "Author": "drbirbdev",
   "Version": "1.2.0",
   "Description": "Add Pail, Shear, and Autograbber upgrades at the blacksmith.",
-  "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
+  "MinimumApiVersion": "4.1.6+09dd92a74f13a3edeccb72242015876d7b5f6463",
   "MinimumGameVersion": "1.6.13",
   "EntryDll": "RanchingToolUpgrades.dll",
   "Dependencies": [
@@ -15,10 +15,11 @@
     },
     {
       "UniqueID": "Pathoschild.ContentPatcher",
-      "MinimumVersion": "2.4.2"
+      "MinimumVersion": "2.4.4"
     },
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
+      "MinimumVersion": "1.14.0",
       "IsRequired": false
     }
   ],
