--- a/SlimingSkill/manifest.json
+++ b/SlimingSkill/manifest.json
@@ -5,7 +5,7 @@
   "Author": "drbirbdev",
   "Version": "0.0.1",
   "Description": "Adds a skill related to raising and fighting slimes.",
-  "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
+  "MinimumApiVersion": "4.1.6+09dd92a74f13a3edeccb72242015876d7b5f6463",
   "MinimumGameVersion": "1.6.13",
   "EntryDll": "SlimingSkill.dll",
   "Dependencies": [
@@ -23,11 +23,12 @@
     },
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
+      "MinimumVersion": "1.14.0",
       "IsRequired": false
     },
     {
       "UniqueID": "spacechase0.SpaceCore",
-      "MinimumVersion": "1.26.1"
+      "MinimumVersion": "1.26.2"
     }
   ],
   "UpdateKeys": [
