--- a/SocializingSkill/manifest.json
+++ b/SocializingSkill/manifest.json
@@ -5,7 +5,7 @@
   "Author": "drbirbdev",
   "Version": "2.1.0",
   "Description": "Adds a skill related to befriending villagers.",
-  "MinimumApiVersion": "4.1.4+4daed27628b4c1810433acdfdf158d87e6f3bef7",
+  "MinimumApiVersion": "4.1.6+09dd92a74f13a3edeccb72242015876d7b5f6463",
   "MinimumGameVersion": "1.6.13",
   "EntryDll": "SocializingSkill.dll",
   "Dependencies": [
@@ -19,15 +19,16 @@
     },
     {
       "UniqueID": "Pathoschild.ContentPatcher",
-      "MinimumVersion": "2.4.2"
+      "MinimumVersion": "2.4.4"
     },
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
+      "MinimumVersion": "1.14.0",
       "IsRequired": false
     },
     {
       "UniqueID": "spacechase0.SpaceCore",
-      "MinimumVersion": "1.26.1"
+      "MinimumVersion": "1.26.2"
     }
   ],
   "UpdateKeys": [
